--- a/frontend/src/index.template.html
+++ b/frontend/src/index.template.html
@@ -3,11 +3,17 @@
   <head>
     <title>Izing</title>
     <meta charset="utf-8">
-    <meta name="description" content="Bot Multi-atendimento">
+    <meta name="description" content="Bot Multi-atendimento Whatsapp, Instagram e Facebook">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
-	<meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>">
+
+    <!-- Tags adicionais para redes sociais (opcional, melhora compartilhamento) -->
+    <meta property="og:title" content="Bot Multi-atendimento Whatsapp, Instagram e Facebook">
+    <meta property="og:description" content="Bot Multi-atendimento Whatsapp, Instagram e Facebook">
+    <meta property="og:type" content="website">
+    <meta name="robots" content="noindex">
 
     <link rel="icon" type="image/png" sizes="128x128" href="icons/icon-128x128.png">
     <link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png">
